# bookish-eureka

./: .env.local  API.md  APP_STATUS.md  LICENSE  README.md  index.html  pyproject.toml  simple_test.py  test_run.py  test_simple.py
eburon/: __init__.py  assistant.py  constants.py  enums.py  exceptions.py  models.py  providers.py
eburon/agent_manager/: assistant_manager.py  base_manager.py  interruption_manager.py  task_manager.py  voicemail_handler.py
eburon/agent_types/: base_agent.py  contextual_conversational_agent.py  extraction_agent.py  graph_agent.py  graph_based_conversational_agent.py  knowledgebase_agent.py  summarization_agent.py  webhook_agent.py
eburon/helpers/: analytics_helpers.py  conversation_history.py  expression_evaluator.py  function_calling_helpers.py  language_detector.py  mark_event_meta_data.py  observable_variable.py  rag_service_client.py  utils.py
eburon/input_handlers/: default.py  telephony.py
eburon/llms/: __init__.py  azure_llm.py  gemini_llm.py  litellm.py  llm.py  message_models.py  ollama_llm.py  openai_base.py  openai_llm.py  tool_call_accumulator.py
eburon/output_handlers/: default.py  telephony.py
eburon/synthesizer/: __init__.py  azure_synthesizer.py  base_synthesizer.py  cartesia_synthesizer.py  deepgram_synthesizer.py  eburon_edge_synthesizer.py  elevenlabs_synthesizer.py  kokoro_synthesizer.py  ollama_tts_synthesizer.py  openai_synthesizer.py  pixa_synthesizer.py  polly_synthesizer.py  rime_synthesizer.py  synthesizer_pool.py  (+2 more)
examples/: simple_assistant.py  text_only_assistant.py
local_setup/: README.md  docker-compose.yml  ngrok-config.yml  quickstart_client.py  quickstart_server.py
(+29 files in other folders)
